--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,56 @@
 	<script src="./js/script.js" defer></script>
 	<title>Contact List JS</title>
 </head>
-<body>
 
+<body class="body">
+	<header class="header">
+		<h1 class="header__title">Contact List JS</h1>
+		<a class="header__link" target="_blank" href="#">GitHub Repository link</a>
+	</header>
+	<main class="main-content">
+		<div class="actions-wrapper">
+			<form class="form" action="#">
+				<input class="form__input" type="text" placeholder="Enter First Name">
+				<input class="form__input" type="text" placeholder="Enter Last Name">
+				<input class="form__input" type="tel" placeholder="Phone +X XXX XXX XX XX">
+				<input class="form__button button" type="submit" value="ADD">
+			</form>
+			<button class="button" type="button">Clear List</button>
+			<button class="button" type="button">Search</button>
+		</div>
+		<div class="contact-list-wrapper">
+			<div class="contact-list">
+				<div class="contact-list__item" data-item="1">a</div>
+				<div class="contact-list__item" data-item="2">b</div>
+				<div class="contact-list__item" data-item="3">c</div>
+				<div class="contact-list__item" data-item="4">d</div>
+				<div class="contact-list__item" data-item="5">e</div>
+				<div class="contact-list__item" data-item="6">f</div>
+				<div class="contact-list__item" data-item="7">g</div>
+				<div class="contact-list__item" data-item="8">h</div>
+				<div class="contact-list__item" data-item="9">i</div>
+				<div class="contact-list__item" data-item="10">j</div>
+				<div class="contact-list__item" data-item="11">k</div>
+				<div class="contact-list__item" data-item="12">l</div>
+				<div class="contact-list__item" data-item="13">m</div>
+			</div>
+			<div class="contact-list">
+				<div class="contact-list__item" data-item="14">n</div>
+				<div class="contact-list__item" data-item="15">o</div>
+				<div class="contact-list__item" data-item="16">p</div>
+				<div class="contact-list__item" data-item="17">q</div>
+				<div class="contact-list__item" data-item="18">r</div>
+				<div class="contact-list__item" data-item="19">s</div>
+				<div class="contact-list__item" data-item="20">t</div>
+				<div class="contact-list__item" data-item="21">u</div>
+				<div class="contact-list__item" data-item="22">v</div>
+				<div class="contact-list__item" data-item="23">w</div>
+				<div class="contact-list__item" data-item="24">x</div>
+				<div class="contact-list__item" data-item="25">y</div>
+				<div class="contact-list__item" data-item="26">z</div>
+			</div>
+		</div>
+	</main>
 </body>
+
 </html>
