--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	</header>
 	<main class="main-content">
 		<div class="actions-wrapper">
-			<form class="form" action="#">
-				<input class="form__input" type="text" placeholder="Enter First Name">
-				<input class="form__input" type="text" placeholder="Enter Last Name">
-				<input class="form__input" type="tel" placeholder="Phone +X XXX XXX XX XX">
+			<form class="form">
+				<input class="form__input" type="text" placeholder="Enter First Name" name="firstName">
+				<input class="form__input" type="text" placeholder="Enter Last Name" name="lastName">
+				<input class="form__input" type="tel" placeholder="Phone +X XXX XXX XX XX" name="phone">
 				<input class="form__button button" type="submit" value="ADD">
 			</form>
 			<button class="button" type="button">Clear List</button>
@@ -27,34 +27,34 @@
 		</div>
 		<div class="contact-list-wrapper">
 			<div class="contact-list">
-				<div class="contact-list__item" data-item="1">a</div>
-				<div class="contact-list__item" data-item="2">b</div>
-				<div class="contact-list__item" data-item="3">c</div>
-				<div class="contact-list__item" data-item="4">d</div>
-				<div class="contact-list__item" data-item="5">e</div>
-				<div class="contact-list__item" data-item="6">f</div>
-				<div class="contact-list__item" data-item="7">g</div>
-				<div class="contact-list__item" data-item="8">h</div>
-				<div class="contact-list__item" data-item="9">i</div>
-				<div class="contact-list__item" data-item="10">j</div>
-				<div class="contact-list__item" data-item="11">k</div>
-				<div class="contact-list__item" data-item="12">l</div>
-				<div class="contact-list__item" data-item="13">m</div>
+				<div class="contact-list__item" data-item="a">a</div>
+				<div class="contact-list__item" data-item="b">b</div>
+				<div class="contact-list__item" data-item="c">c</div>
+				<div class="contact-list__item" data-item="d">d</div>
+				<div class="contact-list__item" data-item="e">e</div>
+				<div class="contact-list__item" data-item="f">f</div>
+				<div class="contact-list__item" data-item="g">g</div>
+				<div class="contact-list__item" data-item="h">h</div>
+				<div class="contact-list__item" data-item="i">i</div>
+				<div class="contact-list__item" data-item="j">j</div>
+				<div class="contact-list__item" data-item="k">k</div>
+				<div class="contact-list__item" data-item="l">l</div>
+				<div class="contact-list__item" data-item="m">m</div>
 			</div>
 			<div class="contact-list">
-				<div class="contact-list__item" data-item="14">n</div>
-				<div class="contact-list__item" data-item="15">o</div>
-				<div class="contact-list__item" data-item="16">p</div>
-				<div class="contact-list__item" data-item="17">q</div>
-				<div class="contact-list__item" data-item="18">r</div>
-				<div class="contact-list__item" data-item="19">s</div>
-				<div class="contact-list__item" data-item="20">t</div>
-				<div class="contact-list__item" data-item="21">u</div>
-				<div class="contact-list__item" data-item="22">v</div>
-				<div class="contact-list__item" data-item="23">w</div>
-				<div class="contact-list__item" data-item="24">x</div>
-				<div class="contact-list__item" data-item="25">y</div>
-				<div class="contact-list__item" data-item="26">z</div>
+				<div class="contact-list__item" data-item="n">n</div>
+				<div class="contact-list__item" data-item="o">o</div>
+				<div class="contact-list__item" data-item="p">p</div>
+				<div class="contact-list__item" data-item="q">q</div>
+				<div class="contact-list__item" data-item="r">r</div>
+				<div class="contact-list__item" data-item="s">s</div>
+				<div class="contact-list__item" data-item="t">t</div>
+				<div class="contact-list__item" data-item="u">u</div>
+				<div class="contact-list__item" data-item="v">v</div>
+				<div class="contact-list__item" data-item="w">w</div>
+				<div class="contact-list__item" data-item="x">x</div>
+				<div class="contact-list__item" data-item="y">y</div>
+				<div class="contact-list__item" data-item="z">z</div>
 			</div>
 		</div>
 	</main>
