Create a unique collection of contacts and add functionality to remove contacts from the list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<main class="main-content">
 		<div class="actions-wrapper">
 			<form class="form">
-				<input class="form__input" type="text" placeholder="Enter First Name" name="firstName">
+				<input class="form__input" type="text" placeholder="Enter First Name" name="firstName" required>
 				<input class="form__input" type="text" placeholder="Enter Last Name" name="lastName">
 				<input class="form__input" type="tel" placeholder="Phone +X XXX XXX XX XX" name="phone">
 				<input class="form__button button" type="submit" value="ADD">
