--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<input class="form__input" type="tel" placeholder="Phone +X XXX XXX XX XX" name="phone">
 				<input class="form__button button" type="submit" value="ADD">
 			</form>
-			<button class="button" type="button">Clear List</button>
+			<button class="button-clear-list" type="button">Clear List</button>
 			<button class="button" type="button">Search</button>
 		</div>
 		<div class="contact-list-wrapper">
