--- a/index.html
+++ b/index.html
@@ -16,54 +16,54 @@
 		<a class="header__link" target="_blank" href="#">GitHub Repository link</a>
 	</header>
 	<main class="main-content">
-		<div class="actions-wrapper">
-			<form class="form">
+		<div class="actions-wrapper js-actions-wrapper">
+			<form class="form js-form">
 				<input class="form__input" type="text" placeholder="Enter First Name" name="firstName" required>
 				<input class="form__input" type="text" placeholder="Enter Last Name" name="lastName">
 				<input class="form__input" type="tel" placeholder="Phone +X XXX XXX XX XX" name="phone">
-				<input class="form__button button" type="submit" value="ADD">
+				<input class="form__btn btn" type="submit" value="ADD">
 			</form>
-			<button class="button" data-clear="clear" type="button">Clear List</button>
-			<button class="button" data-search=search type="button">Search</button>
+			<button class="button js-btn-clear-list" type="button">Clear List</button>
+			<button class="button js-btn-search" type="button">Search</button>
 		</div>
 		<div class="contact-list-wrapper">
-			<div class="contact-list">
-				<div class="contact-list__item" data-item="a">a</div>
-				<div class="contact-list__item" data-item="b">b</div>
-				<div class="contact-list__item" data-item="c">c</div>
-				<div class="contact-list__item" data-item="d">d</div>
-				<div class="contact-list__item" data-item="e">e</div>
-				<div class="contact-list__item" data-item="f">f</div>
-				<div class="contact-list__item" data-item="g">g</div>
-				<div class="contact-list__item" data-item="h">h</div>
-				<div class="contact-list__item" data-item="i">i</div>
-				<div class="contact-list__item" data-item="j">j</div>
-				<div class="contact-list__item" data-item="k">k</div>
-				<div class="contact-list__item" data-item="l">l</div>
-				<div class="contact-list__item" data-item="m">m</div>
+			<div class="contact-list js-contact-list">
+				<div class="contact-list__item js-contact-list__item" data-item="a">a</div>
+				<div class="contact-list__item js-contact-list__item" data-item="b">b</div>
+				<div class="contact-list__item js-contact-list__item" data-item="c">c</div>
+				<div class="contact-list__item js-contact-list__item" data-item="d">d</div>
+				<div class="contact-list__item js-contact-list__item" data-item="e">e</div>
+				<div class="contact-list__item js-contact-list__item" data-item="f">f</div>
+				<div class="contact-list__item js-contact-list__item" data-item="g">g</div>
+				<div class="contact-list__item js-contact-list__item" data-item="h">h</div>
+				<div class="contact-list__item js-contact-list__item" data-item="i">i</div>
+				<div class="contact-list__item js-contact-list__item" data-item="j">j</div>
+				<div class="contact-list__item js-contact-list__item" data-item="k">k</div>
+				<div class="contact-list__item js-contact-list__item" data-item="l">l</div>
+				<div class="contact-list__item js-contact-list__item" data-item="m">m</div>
 			</div>
-			<div class="contact-list">
-				<div class="contact-list__item" data-item="n">n</div>
-				<div class="contact-list__item" data-item="o">o</div>
-				<div class="contact-list__item" data-item="p">p</div>
-				<div class="contact-list__item" data-item="q">q</div>
-				<div class="contact-list__item" data-item="r">r</div>
-				<div class="contact-list__item" data-item="s">s</div>
-				<div class="contact-list__item" data-item="t">t</div>
-				<div class="contact-list__item" data-item="u">u</div>
-				<div class="contact-list__item" data-item="v">v</div>
-				<div class="contact-list__item" data-item="w">w</div>
-				<div class="contact-list__item" data-item="x">x</div>
-				<div class="contact-list__item" data-item="y">y</div>
-				<div class="contact-list__item" data-item="z">z</div>
+			<div class="contact-list js-contact-list">
+				<div class="contact-list__item js-contact-list__item" data-item="n">n</div>
+				<div class="contact-list__item js-contact-list__item" data-item="o">o</div>
+				<div class="contact-list__item js-contact-list__item" data-item="p">p</div>
+				<div class="contact-list__item js-contact-list__item" data-item="q">q</div>
+				<div class="contact-list__item js-contact-list__item" data-item="r">r</div>
+				<div class="contact-list__item js-contact-list__item" data-item="s">s</div>
+				<div class="contact-list__item js-contact-list__item" data-item="t">t</div>
+				<div class="contact-list__item js-contact-list__item" data-item="u">u</div>
+				<div class="contact-list__item js-contact-list__item" data-item="v">v</div>
+				<div class="contact-list__item js-contact-list__item" data-item="w">w</div>
+				<div class="contact-list__item js-contact-list__item" data-item="x">x</div>
+				<div class="contact-list__item js-contact-list__item" data-item="y">y</div>
+				<div class="contact-list__item js-contact-list__item" data-item="z">z</div>
 			</div>
 		</div>
-		<div class="dialog">
+		<!-- <div class="dialog">
 			<div class="dialog-wrapper">
 				<h2>Search contact</h2>
 			</div>
 			<button class="dialog__close button button_big" type="button">X</button>
-		</div>
+		</div> -->
 	</main>
 </body>
 
