--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 		<a class="header__link" target="_blank" href="#">GitHub Repository link</a>
 	</header>
 	<main class="main-content">
-		<div class="actions-wrapper js-actions-wrapper">
-			<form class="form js-form">
-				<input class="form__input" type="text" placeholder="Enter First Name" name="firstName" required>
-				<input class="form__input" type="text" placeholder="Enter Last Name" name="lastName">
-				<input class="form__input" type="tel" placeholder="Phone +X XXX XXX XX XX" name="phone">
-				<input class="form__btn btn" type="submit" value="ADD">
+		<div class="actions js-actions">
+			<form class="actions__form form-actions js-actions__form">
+				<input class="form-actions__input input" type="text" placeholder="Enter First Name" name="firstName" required>
+				<input class="form-actions__input input" type="text" placeholder="Enter Last Name" name="lastName">
+				<input class="form-actions__input input" type="tel" placeholder="Phone +X XXX XXX XX XX" name="phone">
+				<input class="form-actions__btn btn" type="submit" value="ADD">
 			</form>
-			<button class="button js-btn-clear-list" type="button">Clear List</button>
-			<button class="button js-btn-search" type="button">Search</button>
+			<input class="actions__clear-list btn js-actions__clear-list" type="button" value="Clear List">
+			<input class="actions__search btn js-actions__search" type="button" value="Search">
 		</div>
 		<div class="contact-list-wrapper">
 			<div class="contact-list js-contact-list">
@@ -58,12 +58,24 @@
 				<div class="contact-list__item js-contact-list__item" data-item="z">z</div>
 			</div>
 		</div>
-		<!-- <div class="dialog">
-			<div class="dialog-wrapper">
-				<h2>Search contact</h2>
+		<div class="search-modal" data-isvisible="false">
+			<div class="search-modal__content">
+				<header class="search-modal__header">
+					<h2 class="search-modal__title">Search contact</h2>
+					<button class="search-modal__close btn-icon btn-icon_big js-search-modal__close" type="button">
+						<i class="fa-solid fa-square-xmark"></i>
+					</button>
+				</header>
+				<div class="search-modal__body">
+					<input class="search-modal__input input" type="text" placeholder="Search..." name="searchContact">
+					<div class="search-modal__contacts">
+						<div class="search-modal__empty">Ничего не найдено</div>
+					</div>
+				</div>
 			</div>
-			<button class="dialog__close button button_big" type="button">X</button>
-		</div> -->
+			<input class="search-modal__show-all btn" type="button" value="Show all">
+		</div>
+		</div>
 	</main>
 </body>
 
