--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 				</header>
 				<div class="search-modal__body">
 					<input class="search-modal__input input" type="text" placeholder="Search..." name="searchContact">
-					<div class="search-modal__contacts">
-						<div class="search-modal__empty">Ничего не найдено</div>
+					<div class="search-modal__contacts js-search-modal__contacts">
+						<!-- <div class="search-modal__empty">Ничего не найдено</div> -->
 					</div>
 				</div>
+				<input class="search-modal__show-all btn" type="button" value="Show all">
 			</div>
-			<input class="search-modal__show-all btn" type="button" value="Show all">
 		</div>
 		</div>
 	</main>
