Added functionality for deleting contacts from a modal window

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					</button>
 				</header>
 				<div class="search-modal__body">
-					<input class="search-modal__input input" type="text" placeholder="Search..." name="searchContact">
+					<input class="search-modal__input input js-search-modal__input" type="text" placeholder="Search..." name="searchContact">
 					<div class="search-modal__contacts js-search-modal__contacts">
 						<!-- <div class="search-modal__empty">Ничего не найдено</div> -->
 					</div>
