--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 						<!-- <div class="search-modal__empty">Ничего не найдено</div> -->
 					</div>
 				</div>
-				<input class="search-modal__show-all btn" type="button" value="Show all">
+				<input class="search-modal__show-all btn js-show-all" type="button" value="Show all">
 			</div>
 		</div>
 		</div>
