A dialog box for editing the selected contact has been added to the markup

--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@
 				</div>
 				<input class="search-modal__show-all btn js-show-all" type="button" value="Show all">
 			</div>
+			<dialog class="dialog">
+				<header class="dialog__header">
+					<h3 class="dialog__title">Edit</h3>
+					<button class="dialog__close btn-icon btn-icon_big js-dialog__close" type="button">
+						<i class="fa-solid fa-square-xmark"></i>
+					</button>
+				</header>
+				<form method="dialog" class="dialog__form form-dialog">
+					<input class="form-dialog__input input" type="text" placeholder="First Name">
+					<input class="form-dialog__input input" type="text" placeholder="Last Name">
+					<input class="form-dialog__input input" type="tel" placeholder="Phone">
+					<input class="form-dialog__btn input" type="submit" value="Edit">
+				</form>
+			</dialog>
 		</div>
 		</div>
 	</main>
