Added functionality for editing contacts

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 						<i class="fa-solid fa-square-xmark"></i>
 					</button>
 				</header>
-				<form method="dialog" class="dialog__form form-dialog">
-					<input class="form-dialog__input input" type="text" placeholder="First Name">
-					<input class="form-dialog__input input" type="text" placeholder="Last Name">
-					<input class="form-dialog__input input" type="tel" placeholder="Phone">
+				<form method="dialog" class="dialog__form form-dialog js-dialog__form">
+					<input class="form-dialog__input input" type="text" placeholder="First Name" name="firstName">
+					<input class="form-dialog__input input" type="text" placeholder="Last Name" name="lastName">
+					<input class="form-dialog__input input" type="tel" placeholder="Phone" name="phone">
 					<input class="form-dialog__btn input" type="submit" value="Edit">
 				</form>
 			</dialog>
