--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<input class="form-dialog__input input" type="text" placeholder="First Name" name="firstName">
 					<input class="form-dialog__input input" type="text" placeholder="Last Name" name="lastName">
 					<input class="form-dialog__input input" type="tel" placeholder="Phone" name="phone">
-					<input class="form-dialog__btn input" type="submit" value="Edit">
+					<input class="form-dialog__btn input js-form-dialog__btn" type="submit" value="Edit">
 				</form>
 			</dialog>
 		</div>
