Added hiding/showing empty-state when there are/are no contacts

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 				<div class="search-modal__body">
 					<input class="search-modal__input input js-search-modal__input" type="text" placeholder="Search..."
 						name="searchContact">
+						<div class="search-modal__empty js-search-modal__empty">Ничего не найдено</div>
 					<div class="search-modal__contacts js-search-modal__contacts">
-						<!-- <div class="search-modal__empty">Ничего не найдено</div> -->
 					</div>
 				</div>
 				<input class="search-modal__show-all btn js-show-all" type="button" value="Show all">
