--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				</header>
 				<div class="search-modal__body">
 					<input class="search-modal__input input js-search-modal__input" type="text" placeholder="Search..."
-						name="searchContact">
+						name="searchContact" autocomplete="off">
 						<div class="search-modal__empty js-search-modal__empty">Ничего не найдено</div>
 					<div class="search-modal__contacts js-search-modal__contacts">
 					</div>
