Refactoring a block of code for form validation and error handling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</form>
 			<input class="actions__clear-list btn js-actions__clear-list" type="button" value="Clear List">
 			<input class="actions__search btn js-actions__search" type="button" value="Search">
-			<div class="actions__error js-actions__error"></div>
+			<div class="actions__error error-style js-actions__error"></div>
 		</div>
 		<div class="contact-list-wrapper">
 			<div class="contact-list js-contact-list">
@@ -84,7 +84,7 @@
 							<i class="fa-solid fa-square-xmark"></i>
 						</button>
 					</header>
-					<div class="edit-modal__error js-edit-modal__error"></div>
+					<div class="edit-modal__error error-style js-edit-modal__error"></div>
 					<form class="edit-modal__form form-edit-modal js-edit-modal__form">
 						<input class="form-edit-modal__input input js-form-edit-modal__input" type="text" placeholder="First Name" name="firstName">
 						<input class="form-edit-modal__input input js-form-edit-modal__input" type="text" placeholder="Last Name" name="lastName">
