Added check for identical phone numbers

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<main class="main-content">
 		<div class="actions js-actions">
 			<form class="actions__form form-actions js-actions__form">
-					<input class="form-actions__input input js-form-actions__input" type="text" placeholder="Enter First Name" name="firstName">
-					<input class="form-actions__input input js-form-actions__input" type="text" placeholder="Enter Last Name" name="lastName">
-					<input class="form-actions__input input js-form-actions__input" type="tel" placeholder="Phone +X XXX XXX XX XX" name="phone">
+					<input class="form-actions__input input js-form-actions__input" type="text" placeholder="Enter First Name" name="firstName" autocomplete="off">
+					<input class="form-actions__input input js-form-actions__input" type="text" placeholder="Enter Last Name" name="lastName" autocomplete="off">
+					<input class="form-actions__input input js-form-actions__input" type="tel" placeholder="Phone +X XXX XXX XX XX" name="phone" autocomplete="off">
 				<input class="form-actions__btn btn" type="submit" value="ADD">
 			</form>
 			<input class="actions__clear-list btn js-actions__clear-list" type="button" value="Clear List">
@@ -86,9 +86,9 @@
 					</header>
 					<div class="edit-modal__error error-style js-edit-modal__error"></div>
 					<form class="edit-modal__form form-edit-modal js-edit-modal__form">
-						<input class="form-edit-modal__input input js-form-edit-modal__input" type="text" placeholder="First Name" name="firstName">
-						<input class="form-edit-modal__input input js-form-edit-modal__input" type="text" placeholder="Last Name" name="lastName">
-						<input class="form-edit-modal__input input js-form-edit-modal__input" type="tel" placeholder="Phone" name="phone">
+						<input class="form-edit-modal__input input js-form-edit-modal__input" type="text" placeholder="First Name" name="firstName" autocomplete="off">
+						<input class="form-edit-modal__input input js-form-edit-modal__input" type="text" placeholder="Last Name" name="lastName" autocomplete="off">
+						<input class="form-edit-modal__input input js-form-edit-modal__input" type="tel" placeholder="Phone" name="phone" autocomplete="off">
 						<input class="form-edit-modal__btn btn js-form-edit-modal__btn" type="submit" value="Edit">
 					</form>
 				</div>
